--- a/CarpetaStyle/Style2.css
+++ b/CarpetaStyle/Style2.css
@@ -13,17 +13,22 @@
     border-radius: 12px;
     border: 3px solid black;
 }
-/* Estilos para la imagen */
-img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
+
+.ContactoOpcion {
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
-/* Estilos para el texto grande */
-.texto-grande {
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
+.Formulario {
+    padding: 40px;
+    
+    
 }
+.Img {
+    width: 680px;
+    height: 480px;
+    box-shadow: 0px 0px 40px rgba(248, 0, 0, 0.5);
+    margin-left: 10px;
+    margin-top: 35px;
+}
+
+
