--- a/CarpetaStyle/style.css
+++ b/CarpetaStyle/style.css
@@ -8,22 +8,40 @@
 .header1 a {
     color: white;
 }
+
 .header1 .btn {
     background-color: blue;
     border-radius: 12px;
     border: 3px solid black;
 }
 /* Estilos para la imagen */
-img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
+.ImgPagPrincipal {
+    background-color: black;
+    margin: 20px;
+    text-align: center;
+    border: 6px solid red;
 }
+.ImgPagPrincipal .Img {
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+}
+
+.ImgPagPrincipal .Cuadro {
+    text-align: center;
+    margin: 5px;
+}
+.ImgPagPrincipal .CuadroTXT {
+    text-align: center;
+    color: aliceblue;
+}
+
 /* Estilos para el texto grande */
 .texto-grande {
     text-align: center;
     font-size: 24px;
     font-weight: bold;
+    background-color:gray;
+    text-align: center;
 }
+
